--- a/hariproject/pom.xml
+++ b/hariproject/pom.xml
@@ -125,8 +125,7 @@
    
  </dependencies>
  <build>
-   <plugins>
-   
+   <plugins> 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -134,8 +133,7 @@
         <configuration>
         <testFailureIgnore>true</testFailureIgnore>
           <suiteXmlFiles>
-          
-            <suiteXmlFile>testng.xml</suiteXmlFile>
+            <suiteXmlFile>testngCucumber.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
